--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ python = "^3.9.12"
 openai = "^0.27.8"
 langchain = "^0.0.250"
 streamlit = "^1.25.0"
+python-dotenv = "^1.0.0"
+faiss-cpu = "^1.7.4"
+beautifulsoup4 = "^4.12.2"
+unstructured = "^0.9.0"
 
 
 [build-system]
