--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python-dotenv = "^1.0.0"
 faiss-cpu = "^1.7.4"
 beautifulsoup4 = "^4.12.2"
 unstructured = "^0.9.0"
+tiktoken = "^0.4.0"
 
 
 [build-system]
