--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ faiss-cpu = "^1.7.4"
 beautifulsoup4 = "^4.12.2"
 unstructured = "^0.9.0"
 tiktoken = "^0.4.0"
+streamlit-chat = "^0.1.1"
 
 
 [build-system]
